# macos-corelibs

./: LICENSE  README  macos-corelibs.cabal
cbits/: constants.m  functions.m
src/: MacSdk.hs
src/MacSdk/: Prism.hs
src/MacSdk/Framework/: Accessibility.hs  CoreFoundation.hs  CoreGraphics.hs  Types.hs
src/MacSdk/Framework/Accessibility/: Action.hs  Attribute.hs  Error.hsc  Observer.hs  Role.hs  Types.hs  UIElement.hs  UINotification.hs  Value.hs
src/MacSdk/Framework/Accessibility/Attribute/: Types.hs
src/MacSdk/Framework/CoreFoundation/: Allocator.hs  Array.hs  Boolean.hs  Dictionary.hs  Number.hs  Object.hs  RunLoop.hs  String.hsc  UUID.hs
src/MacSdk/Framework/CoreGraphics/: Connection.hs  Display.hs  Dock.hs  Error.hsc  Event.hs  Mouse.hs  Rect.hsc  Space.hs  Window.hs
src/MacSdk/Framework/CoreGraphics/Event/: Field.hsc  Flag.hsc  Location.hsc  Mask.hsc  Type.hsc
src/MacSdk/Framework/CoreGraphics/Window/: Types.hsc
