name:           macos-corelibs
version:        0.0.1.0
synopsis:       Haskell bindings to C-based Mac OS SDK frameworks
description:    Please see the README on Github
category:       System
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    cbits/constants.m
    cbits/functions.m

library
  exposed-modules:
      MacSdk
      MacSdk.Framework.Accessibility
      MacSdk.Framework.Accessibility.Action
      MacSdk.Framework.Accessibility.Attribute
      MacSdk.Framework.Accessibility.Attribute.Types
      MacSdk.Framework.Accessibility.Error
      MacSdk.Framework.Accessibility.Observer
      MacSdk.Framework.Accessibility.Role
      MacSdk.Framework.Accessibility.Types
      MacSdk.Framework.Accessibility.UIElement
      MacSdk.Framework.Accessibility.UINotification
      MacSdk.Framework.Accessibility.Value
      MacSdk.Framework.CoreFoundation
      MacSdk.Framework.CoreFoundation.Allocator
      MacSdk.Framework.CoreFoundation.Array
      MacSdk.Framework.CoreFoundation.Boolean
      MacSdk.Framework.CoreFoundation.Dictionary
      MacSdk.Framework.CoreFoundation.Number
      MacSdk.Framework.CoreFoundation.Object
      MacSdk.Framework.CoreFoundation.RunLoop
      MacSdk.Framework.CoreFoundation.String
      MacSdk.Framework.CoreFoundation.UUID
      MacSdk.Framework.CoreGraphics
      MacSdk.Framework.CoreGraphics.Connection
      MacSdk.Framework.CoreGraphics.Display
      MacSdk.Framework.CoreGraphics.Dock
      MacSdk.Framework.CoreGraphics.Error
      MacSdk.Framework.CoreGraphics.Event
      MacSdk.Framework.CoreGraphics.Event.Field
      MacSdk.Framework.CoreGraphics.Event.Flag
      MacSdk.Framework.CoreGraphics.Event.Location
      MacSdk.Framework.CoreGraphics.Event.Mask
      MacSdk.Framework.CoreGraphics.Event.Type
      MacSdk.Framework.CoreGraphics.Mouse
      MacSdk.Framework.CoreGraphics.Rect
      MacSdk.Framework.CoreGraphics.Space
      MacSdk.Framework.CoreGraphics.Window
      MacSdk.Framework.CoreGraphics.Window.Types
      MacSdk.Framework.Types
  other-modules:
      MacSdk.Prism
      Paths_macos_corelibs
  hs-source-dirs:
      src
  default-extensions:
      RecordWildCards
      TupleSections
      LambdaCase
      GeneralizedNewtypeDeriving
  ghc-options:
      -Wall
      -Wno-unused-top-binds
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -Werror
  cc-options: -Wno-deprecated -Wno-int-to-void-pointer-cast
  include-dirs:
      cbits
  c-sources:
      cbits/constants.m
      cbits/functions.m
  frameworks:
      Carbon, Cocoa
  build-depends:
      base >=4.7 && <5
    , containers
    , managed
    , mtl
    , profunctors
    , transformers
  default-language: Haskell2010
